--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #06A3DA;
+    --primary: #F58B1E;
     --secondary: #34AD54;
     --light: #EEF9FF;
     --dark: #091E3E;
